added my first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="stales/blog.css">
 </head>
 <body>
-  
+ <div>
+  <h3>my first blog</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At molestias pariatur, officiis et blanditiis, voluptates exercitationem eius a fuga, error esse nobis voluptatum eligendi aperiam illum perferendis? Doloremque, iusto modi! </p>
+ </div>
+
+ <div>
+  <h3>my secound blog</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At molestias pariatur, officiis et blanditiis, voluptates exercitationem eius a fuga, error esse nobis voluptatum eligendi aperiam illum perferendis? Doloremque, iusto modi! </p>
+ </div>
+
+ <div>
+  <h3>my third blog</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At molestias pariatur, officiis et blanditiis, voluptates exercitationem eius a fuga, error esse nobis voluptatum eligendi aperiam illum perferendis? Doloremque, iusto modi! </p>
+ </div>
+
 </body>
 </html>
