added the multiple incremental git

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
   <h3>my third blog</h3>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At molestias pariatur, officiis et blanditiis, voluptates exercitationem eius a fuga, error esse nobis voluptatum eligendi aperiam illum perferendis? Doloremque, iusto modi! </p>
  </div>
+<div>
+  <h2>multiple incremental git</h2>
+  <ul>
+    <li>git add .</li>
+    <li>git commit -m "hantaan"</li>
+    <li>git push</li>
+  </ul>
+</div>
 
 </body>
 </html>
