added the jhorna

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <li>git push</li>
   </ul>
 </div>
-
+<div>
+  <h2>jhorna</h2>
+  <img src="images/helll.jpg" alt="" id="yo">
+</div>
 </body>
 </html>
